--- a/index.html
+++ b/index.html
@@ -1,159 +1,335 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rada Vocal — Терапевтический вокал</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Международная школа терапевтического вокала — Rada</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
+<body class="rv-dark">
 
-<body>
-<header class="header">
-    <div class="header-inner">
-        <img src="logo.png" alt="Логотип" class="logo-small" />
-        <div class="menu-icon">☰</div>
+  <!-- HEADER: текстовый бренд (чтобы не было дубля логотипа) -->
+  <header class="rv-header">
+    <div class="rv-wrap">
+      <a class="rv-brand" href="#top">Rada Vocal</a>
+
+      <nav class="rv-nav" id="mainNav" aria-label="Main">
+        <a href="#courses">Курсы</a>
+        <a href="#voice">Voice Studio</a>
+        <a href="#about">О Раде</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact" class="rv-cta">Записаться</a>
+      </nav>
+
+      <button id="burger" class="rv-burger" aria-label="Меню" aria-expanded="false">
+        <span class="b-line"></span><span class="b-line"></span><span class="b-line"></span>
+      </button>
     </div>
-</header>
 
-<section class="hero fade-in">
-    <img src="logo.png" class="hero-logo" alt="Логотип" />
-
-    <h1 class="hero-title">Путь к вашему настоящему голосу, свободе и силе звучания</h1>
-    <p class="hero-subtitle">Голос, который услышат. Уверенность. Сцена. Признание.</p>
-
-    <div class="hero-tags">
-        <span>Освобождение голоса</span>
-        <span>Уверенность в себе</span>
-        <span>Сценическая свобода</span>
+    <!-- mobile -->
+    <div id="mobileMenu" class="rv-mobile" aria-hidden="true">
+      <a href="#courses">Курсы</a>
+      <a href="#voice">Voice Studio</a>
+      <a href="#about">О Раде</a>
+      <a href="#faq">FAQ</a>
+      <a href="#contact" class="rv-cta">Записаться</a>
     </div>
+  </header>
 
-    <div class="hero-buttons">
-        <a href="#form" class="btn-gold">Записаться</a>
-        <a href="#method" class="btn-outline">Узнать о методике</a>
-    </div>
-</section>
+  <main id="top">
+    <!-- HERO with golden-glow parallax layers -->
+    <section class="hero" id="hero">
+      <div class="hero-parallax" data-speed="0.25" aria-hidden="true"></div> <!-- golden glow layer -->
+      <div class="hero-inner rv-wrap">
+        <img src="logo.png" alt="Rada — логотип" class="hero-logo" width="200" height="200">
+        <h1 class="hero-title">Путь к вашему настоящему голосу, свободе и силе звучания</h1>
+        <p class="hero-sub">Голос, который услышат. Уверенность. Сцена. Признание.</p>
 
-<!-- ОБЛЕГЧЁННАЯ СЕКЦИЯ С ГРАДИЕНТОМ -->
-<section class="light-section fade-in">
-    <h2 class="section-title">Voice Studio</h2>
-    <p class="section-desc">
-        Раскройте голос, снимите внутренние зажимы и почувствуйте сценическую свободу.
-        Терапевтический вокал международного уровня.
-    </p>
+        <div class="hero-tags">
+          <span>Освобождение голоса</span>
+          <span>Уверенность в себе</span>
+          <span>Сценическая свобода</span>
+        </div>
 
-    <div class="features">
-        <div class="feature-card">
-            <span class="emoji">📘</span>
+        <div class="hero-actions">
+          <button class="btn btn-primary" data-scroll="#contact">Записаться</button>
+          <a class="btn btn-ghost" href="#about">Узнать о методике</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Voice Studio -->
+    <section id="voice" class="section light-gradient">
+      <div class="rv-wrap">
+        <h2 class="section-title">Voice Studio</h2>
+        <p class="lead">Раскройте голос, снимите внутренние зажимы и почувствуйте сценическую свободу.</p>
+
+        <div class="features-grid">
+          <article class="feature">
+            <div class="ico">📘</div>
             <h3>Авторская методика</h3>
             <p>Педагоги обучены лично Радой и работают по её терапевтической системе.</p>
-        </div>
+          </article>
 
-        <div class="feature-card">
-            <span class="emoji">🎓</span>
+          <article class="feature">
+            <div class="ico">🎓</div>
             <h3>Сертифицированная команда</h3>
-            <p>Эксперты с глубоким опытом и результатами.</p>
-        </div>
+            <p>Экспертные педагоги с результатом.</p>
+          </article>
 
-        <div class="feature-card">
-            <span class="emoji">💛</span>
+          <article class="feature">
+            <div class="ico">🌿</div>
             <h3>Голос + тело + психика</h3>
-            <p>Интегративный подход: техника, эмоции и тело в единой системе.</p>
-        </div>
+            <p>Интеграция техники, эмоций и тела.</p>
+          </article>
 
-        <div class="feature-card">
-            <span class="emoji">🌍</span>
+          <article class="feature">
+            <div class="ico">🌍</div>
             <h3>Ученики по всему миру</h3>
-            <p>Сотни трансформаций и международные достижения.</p>
+            <p>Сотни трансформаций и выступлений.</p>
+          </article>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
-<!-- КУРСЫ -->
-<section class="courses fade-in" id="courses">
-    <h2 class="section-title">Терапевтический вокал — курсы</h2>
-    <p class="section-desc">Выберите формат обучения, который поможет раскрыть голос.</p>
+    <!-- COURSES: cover + cards -->
+    <section id="courses" class="section courses-wrap">
+      <div class="rv-wrap">
+        <div class="courses-cover">
+          <h2 class="section-title">Терапевтический вокал — курсы</h2>
+          <p class="cover-sub">Выберите формат обучения, который поможет раскрыть голос и уверенность</p>
+        </div>
 
-    <div class="course-card">
-        <div class="course-label">Премиум формат</div>
-        <h3 class="course-title">Индивидуально</h3>
-        <div class="course-price">990 000 ₸</div>
-        <p>Максимальное внимание. Дыхание, подача, диапазон. Снятие голосовых зажимов.</p>
-        <a class="btn-gold-full">Оплатить через Kaspi</a>
-    </div>
+        <div class="courses-grid">
+          <!-- Course 1 -->
+          <article class="course-card">
+            <div class="course-title-wrapper"><h3 class="course-title">Премиум формат — индивидуально</h3></div>
+            <div class="course-price">990 000 ₸</div>
+            <p class="course-desc">Максимальное внимание. Дыхание, подача, диапазон. Снятие голосовых и телесных зажимов.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
 
-    <div class="course-card">
-        <div class="course-label">VIP группа</div>
-        <h3 class="course-title">(до 5)</h3>
-        <div class="course-price">495 000 ₸</div>
-        <p>Почти индивидуально. Психология голоса.</p>
-        <a class="btn-gold-full">Kaspi Pay</a>
-    </div>
+          <!-- Course 2 -->
+          <article class="course-card">
+            <div class="course-title-wrapper"><h3 class="course-title">VIP группа (до 5 чел)</h3></div>
+            <div class="course-price">495 000 ₸</div>
+            <p class="course-desc">Малая группа — почти индивидуально. Работа с психологией голоса.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
 
-    <div class="course-card">
-        <div class="course-label">Группа</div>
-        <h3 class="course-title">(до 10)</h3>
-        <div class="course-price">350 000 ₸</div>
-        <p>Практика. Преодоление барьеров.</p>
-        <a class="btn-gold-full">Kaspi Pay</a>
-    </div>
+          <!-- Course 3 -->
+          <article class="course-card">
+            <div class="course-title-wrapper"><h3 class="course-title">Группа (до 10 чел)</h3></div>
+            <div class="course-price">350 000 ₸</div>
+            <p class="course-desc">Учитесь в группе — растите вместе. Практика и выступления.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
 
-    <div class="course-card">
-        <div class="course-label">Пары</div>
-        <div class="course-price">1 200 000 ₸</div>
-        <p>Гармония в голосе и отношениях.</p>
-        <a class="btn-gold-full">Kaspi Pay</a>
-    </div>
+          <!-- Course 4 -->
+          <article class="course-card">
+            <div class="course-title-wrapper"><h3 class="course-title">Пары</h3></div>
+            <div class="course-price">1 200 000 ₸</div>
+            <p class="course-desc">Гармония в голосе и отношениях. Совместный творческий путь.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
 
-    <div class="course-card">
-        <div class="course-label">Полный курс</div>
-        <h3 class="course-title">Трансформация</h3>
-        <div class="course-price">2 200 000 ₸</div>
-        <p>Глубокая работа, сцена, подача, уверенность.</p>
-        <a class="btn-gold-full">Kaspi Pay</a>
-    </div>
-</section>
+          <!-- Course 5 -->
+          <article class="course-card featured">
+            <div class="course-title-wrapper"><h3 class="course-title">Полный курс — Трансформация</h3></div>
+            <div class="course-price">2 200 000 ₸</div>
+            <p class="course-desc">Полная программа: выступления, записи, персональная траектория.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
 
-<!-- БЛОК О РАДЕ -->
-<section class="rada-section fade-in" id="method">
-    <img src="rada.jpg" class="rada-img" alt="Рада Аубакирова" />
+          <!-- Trial -->
+          <article class="course-card">
+            <div class="course-title-wrapper"><h3 class="course-title">Пробный урок</h3></div>
+            <div class="course-price">54 000 ₸</div>
+            <p class="course-desc">Первый шаг к вашему голосу — познакомимся и определим цель.</p>
+            <div class="course-actions">
+              <button class="btn btn-kaspi">Kaspi Pay</button>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
 
-    <h2 class="section-title">Рада Аубакирова</h2>
-    <p class="rada-subtitle">Основатель Международной школы терапевтического вокала</p>
+    <!-- ABOUT RADA -->
+    <section id="about" class="section about-section">
+      <div class="rv-wrap about-grid">
+        <div class="about-photo">
+          <img src="rada.jpg" alt="Рада Аубакирова" class="rada-photo">
+        </div>
+        <div class="about-content">
+          <h2 class="section-title">Рада Аубакирова</h2>
+          <div class="about-sub">Основатель Международной школы терапевтического вокала</div>
+          <p class="about-text">Автор уникальной методики работы с голосом через тело и психику. Более 10 лет практики, сотни трансформаций: артисты, спикеры, педагоги и люди, стремящиеся к истинному звучанию.</p>
+          <a class="btn btn-primary" href="#contact">Записаться на консультацию</a>
+        </div>
+      </div>
+    </section>
 
-    <p class="rada-text">
-        Автор уникальной методики работы с голосом через тело и психику.
-        Более 20 лет практики, сотни трансформаций: артисты, спикеры, педагоги
-        и люди, стремящиеся к истинному звучанию.
-    </p>
+    <!-- FAQ -->
+    <section id="faq" class="section faq-section">
+      <div class="rv-wrap">
+        <h2 class="section-title">Часто задаваемые вопросы</h2>
+        <div class="faq-list">
+          <div class="faq-item">
+            <button class="faq-q">Нужен ли опыт в вокале?</button>
+            <div class="faq-a">Нет — методика подходит как для начинающих, так и для опытных.</div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-q">Онлайн или оффлайн?</button>
+            <div class="faq-a">Оба формата: очно в студии и дистанционно.</div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-q">Сколько длится урок?</button>
+            <div class="faq-a">Стандарт — 60 минут. Возможны расширенные сессии.</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <a class="btn-gold">Записаться на консультацию</a>
-</section>
+    <!-- CONTACT / CTA -->
+    <section id="contact" class="section final-cta">
+      <div class="rv-wrap">
+        <h2 class="section-title">Ваш голос — ваше влияние</h2>
+        <p class="lead">Готовы начать? Оставьте заявку — мы свяжемся и согласуем удобное время.</p>
+        <div class="cta-actions">
+          <button class="btn btn-primary" data-scroll="#form">Записаться</button>
+        </div>
+      </div>
+    </section>
 
-<section class="faq fade-in">
-    <h2 class="section-title">Часто задаваемые вопросы</h2>
+    <!-- optional hidden form anchor -->
+    <div id="form" style="height:1px;"></div>
+  </main>
 
-    <div class="faq-item">Нужен ли опыт в вокале?</div>
-    <div class="faq-item">Онлайн или оффлайн?</div>
-    <div class="faq-item">Сколько длится урок?</div>
-</section>
-
-<section class="cta fade-in" id="form">
-    <h2 class="section-title">Ваш голос — ваше влияние</h2>
-    <p class="section-desc">Готовы начать? Оставьте заявку, и мы свяжемся с вами.</p>
-    <a class="btn-gold-large">Записаться</a>
-</section>
-
-<footer class="footer">
-    <div class="footer-links">
+  <footer class="rv-footer">
+    <div class="rv-wrap footer-inner">
+      <div class="footer-links">
         <a href="#">Kaspi</a>
         <a href="#">WhatsApp</a>
         <a href="#">Instagram</a>
+      </div>
+      <div class="footer-copy">© 2025 Международная школа терапевтического вокала — Рада Аубакирова</div>
     </div>
+  </footer>
 
-    <p class="footer-copy">
-        © 2025 Международная школа терапевтического вокала — Рада Аубакирова
-    </p>
-</footer>
+  <!-- JS: burger, mobile menu, smooth scroll, faq accordion, parallax -->
+  <script>
+    (function(){
+      // helpers
+      const $ = sel => document.querySelector(sel);
+      const $$ = sel => Array.from(document.querySelectorAll(sel));
+
+      // BURGER
+      const burger = $('#burger');
+      const mobile = $('#mobileMenu');
+      burger && burger.addEventListener('click', (e) => {
+        const open = burger.getAttribute('aria-expanded') === 'true';
+        burger.setAttribute('aria-expanded', String(!open));
+        if (!open) {
+          mobile.classList.add('open');
+          mobile.setAttribute('aria-hidden','false');
+          document.documentElement.classList.add('no-scroll');
+        } else {
+          mobile.classList.remove('open');
+          mobile.setAttribute('aria-hidden','true');
+          document.documentElement.classList.remove('no-scroll');
+        }
+      });
+
+      // close mobile on link click
+      mobile && $$( '#mobileMenu a' ).forEach(a => a.addEventListener('click', () => {
+        burger && burger.setAttribute('aria-expanded','false');
+        mobile.classList.remove('open');
+        mobile.setAttribute('aria-hidden','true');
+        document.documentElement.classList.remove('no-scroll');
+      }));
+
+      // click outside to close mobile
+      document.addEventListener('click', (e) => {
+        if (!mobile) return;
+        if (!mobile.classList.contains('open')) return;
+        const inside = mobile.contains(e.target) || (burger && burger.contains(e.target));
+        if (!inside) {
+          mobile.classList.remove('open');
+          mobile.setAttribute('aria-hidden','true');
+          burger && burger.setAttribute('aria-expanded','false');
+          document.documentElement.classList.remove('no-scroll');
+        }
+      });
+
+      // ESC closes
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && mobile && mobile.classList.contains('open')) {
+          mobile.classList.remove('open');
+          mobile.setAttribute('aria-hidden','true');
+          burger && burger.setAttribute('aria-expanded','false');
+          document.documentElement.classList.remove('no-scroll');
+        }
+      });
+
+      // Smooth scroll for elements with data-scroll or anchor links
+      const smoothTo = (selector) => {
+        const el = document.querySelector(selector);
+        if (!el) return;
+        const y = el.getBoundingClientRect().top + window.scrollY - 84;
+        window.scrollTo({ top: y, behavior: 'smooth' });
+      };
+      $$('[data-scroll]').forEach(btn => btn.addEventListener('click', (e) => {
+        e.preventDefault(); smoothTo(btn.getAttribute('data-scroll'));
+      }));
+      $$('a[href^="#"]').forEach(a => a.addEventListener('click', (e) => {
+        const href = a.getAttribute('href');
+        if (!href || href === '#') return;
+        e.preventDefault(); smoothTo(href);
+      }));
+
+      // FAQ accordion
+      $$('.faq-q').forEach(q => q.addEventListener('click', () => {
+        const panel = q.nextElementSibling;
+        if (!panel) return;
+        const opened = panel.style.maxHeight && panel.style.maxHeight !== '0px';
+        $$('.faq-a').forEach(p => p.style.maxHeight = '0px');
+        panel.style.maxHeight = opened ? '0px' : (panel.scrollHeight + 20) + 'px';
+      }));
+
+      // Parallax: golden glow layer
+      const par = document.querySelector('.hero-parallax');
+      if (par) {
+        let lastY = window.scrollY;
+        const speed = parseFloat(par.getAttribute('data-speed')) || 0.2;
+        const onScroll = () => {
+          lastY = window.scrollY;
+          // use transform: translateY for smooth GPU movement
+          par.style.transform = `translateY(${lastY * speed}px)`;
+          requestAnimationFrame(onScroll);
+        };
+        requestAnimationFrame(onScroll);
+      }
+
+      // prevent image drag
+      $$('img').forEach(i => i.setAttribute('draggable','false'));
+    })();
+  </script>
 
 </body>
 </html>
