--- a/index.html
+++ b/index.html
@@ -103,6 +103,48 @@
     </div>
   </section>
 
+<section id="why" class="why-section">
+  <div class="container">
+    <h2 class="section-title">Почему выбирают нашу школу</h2>
+
+    <div class="why-grid">
+
+      <div class="why-card">
+        <div class="why-icon">
+          <img src="icons/book.png" alt="">
+        </div>
+        <h3>Авторская методика</h3>
+        <p>Педагоги обучены лично Радой и работают по её терапевтическому подходу.</p>
+      </div>
+
+      <div class="why-card">
+        <div class="why-icon">
+          <img src="icons/graduation.png" alt="">
+        </div>
+        <h3>Сертифицированная команда</h3>
+        <p>Экспертные педагоги с глубоким опытом и результатами.</p>
+      </div>
+
+      <div class="why-card">
+        <div class="why-icon">
+          <img src="icons/body.png" alt="">
+        </div>
+        <h3>Голос + тело + психика</h3>
+        <p>Интеграция техники, эмоций и тела в единой системе.</p>
+      </div>
+
+      <div class="why-card">
+        <div class="why-icon">
+          <img src="icons/world.png" alt="">
+        </div>
+        <h3>Ученики по всему миру</h3>
+        <p>Сотни трансформаций, международные достижения и выступления.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
   <!-- Courses section (separated with gradient cover) -->
   <section id="courses" class="courses">
     <div class="container">
