--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         <div class="about-text">
           <h2>Рада Аубакирова</h2>
           <p class="muted-gold">Основатель Международной школы терапевтического вокала</p>
-          <p class="lead">Автор уникальной методики работы с голосом через тело и психику. <strong>20 лет практики</strong>, сотни трансформаций: артисты, спикеры, педагоги и люди, стремящиеся к истинному звучанию.</p>
+          <p class="lead">Рада Аубакирова — международный эксперт в раскрытии голоса и внутреннего потенциала человека.
+Психолог-сексолог, коуч ICU, ментор, певица и режиссёр. Более 10 лет консультативной практики и более 2000 учеников по всему миру, для которых голос стал инструментом силы, уверенности и трансформации.
+Лауреат международных конкурсов, автор песен, продюсер двух музыкальных групп и организатор творческих проектов.
+Основатель творческого центра «Касиетті» и создатель запатентованной методики «Терапевтический вокал», которая объединяет голос, тело, психику и сценическую энергию в единую систему глубоких изменений.</p>
 
           <div class="about-actions">
             <button class="btn btn-primary">Записаться на консультацию</button>
