--- a/index.html
+++ b/index.html
@@ -4,160 +4,224 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rada Vocal — Международная школа терапевтического вокала</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!-- Шрифты -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<!-- HEADER -->
-<header class="header">
-    <div class="header-container">
-        <div class="header-logo">Rada Vocal</div>
+<!-- ======================= HEADER ======================= -->
+<header class="rv-header">
+    <div class="rv-container">
+        <div class="rv-logo">Rada Vocal</div>
 
-        <div class="burger" id="burgerBtn">☰</div>
-
-        <nav class="nav" id="navMenu">
+        <nav class="rv-nav">
             <a href="#courses">Курсы</a>
             <a href="#about">О Раде</a>
+            <a href="#games">Игры</a>
             <a href="#faq">FAQ</a>
-            <a href="#contact" class="nav-cta">Записаться</a>
+            <a href="#contact" class="rv-cta">Записаться</a>
         </nav>
+
+        <div class="rv-burger" id="burgerBtn">&#9776;</div>
     </div>
 
-    <div class="mobile-nav" id="mobileNav">
+    <div class="rv-mobile-menu" id="mobileNav">
         <a href="#courses">Курсы</a>
         <a href="#about">О Раде</a>
+        <a href="#games">Игры</a>
         <a href="#faq">FAQ</a>
-        <a href="#contact" class="nav-cta">Записаться</a>
+        <a href="#contact" class="rv-cta">Записаться</a>
     </div>
 </header>
 
 
-<!-- HERO -->
+<!-- ======================= HERO ======================= -->
 <section class="hero">
 
-    <!-- Большой логотип фоном -->
-    <img src="logo.png" class="hero-logo-bg" alt="Logo">
+    <!-- Большой круг-логотип сзади -->
+    <img src="logo.png" class="hero-logo-bg" alt="Rada Vocal Logo">
 
-    <!-- Певица поверх -->
+    <!-- Частицы золота -->
+    <canvas id="goldParticles"></canvas>
+
+    <!-- Певица -->
     <img src="singer-fg.png" class="hero-singer" alt="Singer">
 
     <div class="hero-content">
-        <h1>Путь к вашему настоящему голосу<br> свободе и сценической силе</h1>
+        <h1 class="hero-title">Путь к вашему настоящему голосу<br> свободе и силе звучания</h1>
 
-        <p class="hero-subtitle">
-            Голос. Уверенность. Энергия сцены.
-        </p>
+        <p class="hero-subtitle">Голос, который слышат. Уверенность. Сцена. Признание.</p>
 
-        <button class="cta">Записаться</button>
+        <button class="cta-button">Записаться</button>
     </div>
 </section>
 
 
-<!-- COURSES -->
+<!-- ======================= WHY ======================= -->
+<section class="why-choose">
+    <h2 class="section-title">Почему выбирают нашу школу</h2>
+
+    <div class="features-grid">
+
+        <div class="feature-card">
+            <span class="feature-icon">🎤</span>
+            <h3>Авторская методика</h3>
+            <p>Глубокая работа с телом, психикой и голосом.</p>
+        </div>
+
+        <div class="feature-card">
+            <span class="feature-icon">⭐</span>
+            <h3>Сертифицированные педагоги</h3>
+            <p>Команда, обученная лично Рады Аубакировой.</p>
+        </div>
+
+        <div class="feature-card">
+            <span class="feature-icon">💫</span>
+            <h3>Голос + тело + эмоции</h3>
+            <p>Комплексный подход, трансформирующий человека.</p>
+        </div>
+
+        <div class="feature-card">
+            <span class="feature-icon">🌍</span>
+            <h3>Ученики по всему миру</h3>
+            <p>Тысячи голосов, которые звучат свободно.</p>
+        </div>
+
+    </div>
+</section>
+
+
+<!-- ======================= COURSES ======================= -->
 <section id="courses" class="courses">
-    <div class="section-title">Курсы терапевтического вокала</div>
+    <h2 class="section-title">Терапевтический вокал — Курсы</h2>
 
     <div class="courses-grid">
 
         <div class="course-card premium">
-            <div class="badge">Премиум</div>
-            <h3>Премиум формат (индивидуально)</h3>
-            <div class="price">990 000 ₸</div>
+            <span class="course-badge">Премиум</span>
+            <h3 class="course-title">Индивидуально</h3>
+            <div class="price">990,000 ₸</div>
             <ul>
                 <li>Максимальное внимание</li>
-                <li>Работа с голосом и телом</li>
-                <li>Психо-эмоциональная уверенность</li>
+                <li>Голос, дыхание, подача</li>
+                <li>Снятие зажимов</li>
+                <li>Личностная трансформация</li>
             </ul>
-            <button class="kaspi">Kaspi Pay</button>
+            <button class="kaspi-button">Kaspi Pay</button>
         </div>
 
         <div class="course-card">
-            <h3>VIP группа (до 5 чел)</h3>
-            <div class="price">495 000 ₸</div>
+            <h3 class="course-title">VIP группа (до 5 чел)</h3>
+            <div class="price">495,000 ₸</div>
             <ul>
-                <li>Почти индивидуальная работа</li>
-                <li>Раскрытие голоса</li>
+                <li>Почти индивидуальный формат</li>
+                <li>Психология голоса</li>
                 <li>Сценическая свобода</li>
             </ul>
-            <button class="kaspi">Kaspi Pay</button>
+            <button class="kaspi-button">Kaspi Pay</button>
         </div>
 
         <div class="course-card">
-            <h3>Группа (до 10 чел)</h3>
-            <div class="price">350 000 ₸</div>
+            <h3 class="course-title">Группа (до 10 чел)</h3>
+            <div class="price">350,000 ₸</div>
             <ul>
-                <li>Работа в команде</li>
-                <li>Уверенность через практику</li>
-                <li>Поддержка коллектива</li>
+                <li>Рост вместе</li>
+                <li>Преодоление барьеров</li>
+                <li>Практика и поддержка</li>
             </ul>
-            <button class="kaspi">Kaspi Pay</button>
+            <button class="kaspi-button">Kaspi Pay</button>
         </div>
 
     </div>
 </section>
 
 
-<!-- ABOUT RADA -->
-<section id="about" class="about">
+<!-- ======================= ABOUT RADA ======================= -->
+<section id="about" class="about-rada">
     <div class="about-grid">
-        <div>
-            <img src="rada.jpeg" class="rada-photo" alt="Rada Aubakirova">
+
+        <div class="about-photo">
+            <img src="rada.jpeg" alt="Rada Aubakirova">
         </div>
 
-        <div>
+        <div class="about-content">
             <h2>Рада Аубакирова</h2>
-            <p class="about-sub">Основатель Международной школы терапевтического вокала</p>
+            <p class="about-sub">Основатель международной школы терапевтического вокала</p>
 
-            <p>
-                Более 15 лет Рада помогает людям обрести уверенность, раскрыть природный голос,
-                освободиться от внутренних зажимов и выйти на новый уровень сценической свободы.
-            </p>
-            <p>
-                Её авторская методика соединяет работу с телом, психикой и голосом —
-                для глубокой внутренней трансформации.
-            </p>
+            <p class="about-text">30 лет опыта работы с голосом, телом и психикой. Тысячи учеников прошли путь трансформации — от скованности до свободы голоса и уверенности на сцене.</p>
+
+            <p class="about-text">Автор уникального подхода, объединяющего вокал, психологию и телесные практики. Рада развивает педагогов по всему миру и обучает трансформационному вокалу.</p>
+        </div>
+
+    </div>
+</section>
+
+
+<!-- ======================= GAMES ======================= -->
+<section id="games" class="games">
+    <h2 class="section-title">Трансформационная игра "Мелодия души"</h2>
+
+    <div class="game-grid">
+
+        <div class="game-card">
+            <h3>Индивидуальная игра</h3>
+            <div class="price">108,000 ₸</div>
+            <button class="kaspi-button">Kaspi Pay</button>
+        </div>
+
+        <div class="game-card">
+            <h3>Групповая игра</h3>
+            <div class="price">54,000 ₸</div>
+            <button class="kaspi-button">Kaspi Pay</button>
+        </div>
+
+        <div class="game-card premium">
+            <h3>Обучение игре</h3>
+            <div class="price">1,200,000 ₸</div>
+            <button class="kaspi-button">Kaspi Pay</button>
+        </div>
+
+    </div>
+
+</section>
+
+
+<!-- ======================= FAQ ======================= -->
+<section id="faq" class="faq">
+    <h2 class="section-title">Часто задаваемые вопросы</h2>
+
+    <div class="faq-list">
+        <div class="faq-item">
+            <h3 class="faq-question">Нужен ли опыт в вокале?</h3>
+            <p class="faq-answer">Нет, подход подходит как новичкам, так и профессионалам.</p>
+        </div>
+
+        <div class="faq-item">
+            <h3 class="faq-question">Онлайн или оффлайн?</h3>
+            <p class="faq-answer">Доступны оба формата.</p>
+        </div>
+
+        <div class="faq-item">
+            <h3 class="faq-question">Когда видны результаты?</h3>
+            <p class="faq-answer">Первый прогресс — уже после нескольких занятий.</p>
         </div>
     </div>
+
 </section>
 
 
-<!-- FAQ -->
-<section id="faq" class="faq">
-    <div class="section-title">FAQ — ответы на вопросы</div>
-
-    <div class="faq-item">
-        <div class="faq-q">Нужен ли опыт в вокале?</div>
-        <div class="faq-a">Нет, методика подходит и новичкам, и профессионалам.</div>
-    </div>
-
-    <div class="faq-item">
-        <div class="faq-q">Когда будут результаты?</div>
-        <div class="faq-a">Уже после 2–3 занятий вы почувствуете изменения.</div>
-    </div>
-
-    <div class="faq-item">
-        <div class="faq-q">Онлайн или офлайн?</div>
-        <div class="faq-a">Доступны оба формата обучения.</div>
-    </div>
-</section>
-
-
-<!-- CTA -->
+<!-- ======================= CTA ======================= -->
 <section id="contact" class="final-cta">
-    <h2>Готовы раскрыть ваш голос?</h2>
-    <button class="cta cta-large">Записаться</button>
+    <h2 class="cta-title">Ваш голос — ваше влияние</h2>
+    <button class="cta-button large">Записаться</button>
 </section>
 
 
-<script>
-document.getElementById("burgerBtn").onclick = () => {
-    document.getElementById("mobileNav").classList.toggle("open");
-};
-</script>
+<!-- ======================= JS SCRIPTS ======================= -->
+<script src="scripts.js"></script>
 
 </body>
 </html>
